ingress/ingress.yaml
# Create Ingress resource for 2 hosts
#-----Default Namespace------- cjain------------
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ecommerce
  annotations:
    kubernetes.io/ingress.class: nginx
    namespace: cjain
spec:
  rules:
  - host: flipkart.testlinux.tech
    http:
      paths:
      - path: /
        backend:
          serviceName: flipkart-svc
          servicePort: 8081
  - host: amazon.testlinux.tech
    http:
      paths:
      - path: /
        backend:
          serviceName: amazon-svc
          servicePort: 8082
